--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         min-height: 80px; resize: vertical;
     }
     .match-container {
-        display: grid; grid-template-columns: 1fr auto 1fr; gap: 10px; align-items: center; max-width: 600px; margin: 20px auto; text-align: left;
+        display: grid; grid-template-columns: 1fr; gap: 10px; align-items: center; max-width: 600px; margin: 20px auto; text-align: left;
     }
     .match-container input {
         width: 40px; text-align: center; font-size: 1rem; padding: 5px;
     }
     .match-options {
-        grid-column: span 3; border: 1px dashed #444; padding: 10px; border-radius: 8px;
+        grid-column: span 1; border: 1px dashed #444; padding: 10px; border-radius: 8px;
     }
     .nav-buttons {
         margin-top: 20px;
